<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_income"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/nav_income" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/nav_expenses" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_periods"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/nav_periods" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_reports" />
    </group>

</menu>
