<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.controlgastos.ui.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/incomesFragment"
        android:name="com.example.controlgastos.ui.IncomesFragment"
        android:label="@string/nav_incomes" />

    <fragment
        android:id="@+id/expensesFragment"
        android:name="com.example.controlgastos.ui.ExpensesFragment"
        android:label="@string/nav_expenses" />

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.controlgastos.ui.CategoriesFragment"
        android:label="@string/nav_categories" />

    <fragment
        android:id="@+id/periodsFragment"
        android:name="com.example.controlgastos.ui.PeriodsFragment"
        android:label="@string/nav_periods" />

    <fragment
        android:id="@+id/reportsFragment"
        android:name="com.example.controlgastos.ui.ReportsFragment"
        android:label="@string/nav_reports" />

</navigation>
